Seeing as video is fixed sized, layout is reflown to suit this need. Overflowing tweets are hidden

--- a/TweetCopter/public/stylesheets/style.css
+++ b/TweetCopter/public/stylesheets/style.css
@@ -5,24 +5,57 @@
 html, body {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     height: 100%;
-    background-color: #777;
     color: #000;
+    background-color: #ccc;
 }
 a {
     color: #00B7FF;
 }
-table#screens {
-    width: 100%;
-    height: 100%;
+.box-column {
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    background-color: #eee;
+    display: block;
+    position:absolute;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
-table#screens td {
-    width: 50%;
-    background: #fff;
+#screen1 {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 50%;
+    margin-left: 1em;
+    margin-right: 0.5em;
+}
+#droneStream {
+    display: block;
+    position:absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    right: 0;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    text-align: center;
+}
+#screen2 {
+    top: 380px;
+    bottom: 0;
+    left: 50%;
+    right: 0;
+    margin-left: 0.5em;
+    margin-right: 1em;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 .twit {
     float: left;
     clear: both;
     padding-left: 1em;
+    padding-top: 1em;
+    width: 100%;
 }
 .twit-img {
     float: left;
@@ -53,4 +86,20 @@ table#screens td {
     clear: both;
     opacity: 0.4;
     font-size: 0.6em;
+}
+#users {
+    float: left;
+}
+.user-image {
+    text-align: center;
+    float: left;
+    clear: none;
+    padding-left: 1em;
+}
+.user-image img {
+    padding: 0.5em;
+    padding-bottom: 0;
+}
+.user-image div:before {
+    content: '@';
 }
